2011-07-21  Christopher Faylor  <me.cygwin2011@cgf.cx>
	    Corinna Vinschen  <corinna@vinschen.de>

	* fhandler.cc: Add #include for asm/socket.h for dealing with FIONREAD.
	(fhandler_base::ioctl): Special-case errno for FIONREAD.
	* fhandler_dsp.cc (fhandler_dev_dsp::ioctl): Rename parameter for
	consistency.  Call fhandler_base::ioctl to decode default condition.
	* fhandler_serial.cc (fhandler_serial::ioctl): Ditto.
	* fhandler_tty.cc (fhandler_pty_slave::ioctl): Call
	fhandler_base::ioctl to decode default condition.
	* fhandler_windows.cc (fhandler_windows::ioctl): Ditto.

2011-07-21  Corinna Vinschen  <corinna@vinschen.de>

	* heap.cc (eval_start_address): Simplify test for large address
	awareness of executable, which works for 32 and 64 bit systems.
	Change comment accordingly.

2011-07-21  Corinna Vinschen  <corinna@vinschen.de>

	* heap.cc (eval_start_address): New static function to evaluate the
	best start address for the application heap.
	(heap_init): Call eval_start_address to fetch the start value for
	start_address.  Move preceeding comment to eval_start_address.

2011-07-21  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>

	* cygwin.din (pthread_condattr_getclock): Export.
	(pthread_condattr_setclock): Export.
	* posix.sgml (std-notimpl): Move pthread_condattr_getclock and
	pthread_condattr_setclock from here...
	(std-susv4): ... to here.
	* sysconf.cc (sca): Set _SC_CLOCK_SELECTION to _POSIX_CLOCK_SELECTION.
	* thread.cc: (pthread_condattr::pthread_condattr): Initialize clock_id.
	(pthread_cond::pthread_cond): Initialize clock_id.
	(pthread_cond_timedwait): Use clock_gettime() instead of gettimeofday()
	in order to support all allowed clocks.
	(pthread_condattr_getclock): New function.
	(pthread_condattr_setclock): New function.
	* thread.h (class pthread_condattr): Add clock_id member.
	(class pthread_cond): Ditto.
	* include/pthread.h: Remove obsolete comment.
	(pthread_condattr_getclock): Declare.
	(pthread_condattr_setclock): Declare.